# shellstreaming

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
config/: sample-shellstreaming.cnf
doc/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
doc/sphinx/: conf.py  index.rst  tutorial.rst
example/: 01_RandInt.py  01_randint.py  02_FilterSplit.py  03_CountWindow.py  04_Sort.py  05_ShellCmd.py  06_FilterSplit.py  06_FilterSplitOperator.py  06_ShellCmd_daemon.py  07_TextFileTail.py  08_CopySplit.py  50_wordcount.py  51_apache_log_analysis.py  52_enju.py  53_cat_timestamp.py  53_cat_timestamp_calc_latency.py
example/shellcmd/: split_sentence  word_count
perf_test/: 01_loop_op.py  02_FilterSplit_Null_ostream.py  03_send_tuple_between.py  04_parallel_pingpong.py
shellstreaming/: __init__.py  base_job.py  batch.py  batch_queue.py  batch_set.py  columndef.py  config.py  error.py  logger.py  record.py  recorddef.py  timed_batch.py  timed_record.py  timespan.py  timestamp.py  type.py  util.py
shellstreaming/api/: __init__.py
shellstreaming/autodeploy/: auto_deploy.py
shellstreaming/comm/: auto_deploy.py  inputstream.py  inputstream_dispatcher.py  inputstream_executor.py  job_dispatcher.py  job_executor.py  master.py  outputstream_executor.py  run_worker_server.py  util.py  worker.py  worker_server.py  (+1 more)
sphinx/: conf.py  index.rst
support-files/: sample-shellstreaming.cnf  shellstreaming.cnf
test/: test_record.py  test_recorddef.py  test_type.py
(+151 files in other folders)
