[release]
version-files = shellstreaming/__init__.py,README.rst

[metadata]
description-file = README.md

[nosetests]
verbosity       = 2
nocapture       = 1
detailed-errors = 1
with-coverage   = 1
cover-erase     = 1
cover-branches  = 1
pdb             = 1
pdb-failures    = 1

[build_sphinx]
fresh-env  = 1
all_files  = 1
builder    = html
source-dir = sphinx
build-dir  = doc

[upload_sphinx]
upload-dir = doc/html
